--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ body {
 
 /*Estilizando nosso banner*/
 .banner {
-    background-image: url(/img/pizza.jpg);
+    background-image: url(img/pizza.jpg);
     background-size: cover;
     background-position: top center;
     height: 400px;
